# VRC-KeyboardController-in-VR_OSC

./: .gitattributes  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docker/: dockerfile
locales/: en-US.yml  ja-JP.yml
src/: app.rs  lib.rs  main.rs  osc.rs  ui.rs
src/input/: mod.rs
