[package]
name = "vrc-keyboard"
version = "0.1.0"
edition = "2021"
authors = ["Satsuki Akiba <anosatsuk124@gmail.com>"]
description = "An OSC tool to control VRChat with keyboard in VR mode."
license = "Apache-2.0"
build = "build.rs"
default-run = "vrc-keyboard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
required-features = ["default"]

[[bin]]
name = "vrc-keyboard"
required-features = ["release"]

[[bin]]
name = "xtasks"
required-features = ["xtasks"]

[features]
default = ["release", "xtasks"]

# Release features
release = ["release-core", "release-gui-native", "release-terminal"]
release-core = ["core"]
release-gui-native = ["release-core", "gui-native"]
release-terminal = ["release-core", "terminal"]

# Debug features
debug = ["default"]

# Core features
core = ["dep:rosc"]
gui = ["dep:eframe", "dep:egui_logger"]
terminal = ["dep:clap"]

# interface features
xtasks = ["debug"]
gui-wasm = ["gui"]
gui-native = ["gui"]

[package.metadata.winresource]
OriginalFilename = "VRCKeyboard_OSC.exe"
LegalCopyright = "Copyright 2023- Satsuki Akiba"

[package.metadata.bundle]
name = "VRCKeyboard_OSC"
identifier = "dev.anosatsuk124.VRCKeyboard_OSC"
# icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
# resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
version = "0.1.0"
copyright = """
Copyright 2024- Satsuki Akiba

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
"""
category = "Game"
short_description = "An OSC tool to control VRChat with keyboard in VR mode."
long_description = """
"""
deb_depends = [
  "libxcb-render0-dev",
  "libxcb-shape0-dev",
  "libxcb-xfixes0-dev",
  "libxkbcommon-dev",
  "libssl-dev",
]
osx_url_schemes = ["dev.anosatsuk124.vrc-keyboard"]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"], optional = true }
eframe = { version = "0.21.3", optional = true }
egui_logger = { version = "0.3.0", optional = true }
env_logger = "0.10.0"
log = "0.4.17"
once_cell = "1.17.1"
rosc = { version = "0.10.1", optional = true }
rust-i18n = { version = "1.2.1-alpha.0", git = "https://github.com/anosatsuk124/rust-i18n.git", branch = "fix-globerror" }
sys-locale = "0.3.0"
tokio = { version = "1.28.1", features = ["full"] }

[build-dependencies]
winresource = "0.1"
anyhow = "1.0.71"
env_logger = "0.10.0"
log = "0.4.17"
